feat: 新增云搜书,新增泛型返回
